@@ -17,6 +17,9 @@
  */
 package com.graphhopper.routing.util;
 
+import com.graphhopper.routing.ev.RoadAccess;
+import com.graphhopper.util.Helper;
+
 /**
  * Define disjunct ways of transportation that are used to create and populate our encoded values from a data source
  * like OpenStreetMap.
@@ -29,12 +32,23 @@ public enum TransportationMode {
     CAR(true), MOTORCYCLE(true), HGV(true);
 
     private final boolean motorVehicle;
+    private final String name;
 
     TransportationMode(boolean motorVehicle) {
         this.motorVehicle = motorVehicle;
+        this.name = Helper.toLowerCase(name());
     }
 
     public boolean isMotorVehicle() {
         return motorVehicle;
+    }
+
+    public String getAccessName() {
+        return RoadAccess.key(name);
+    }
+
+    @Override
+    public String toString() {
+        return name;
     }
 }
