@@ -20,7 +20,6 @@ package com.graphhopper.routing.weighting;
 import com.graphhopper.routing.ev.EnumEncodedValue;
 import com.graphhopper.routing.ev.RoadAccess;
 import com.graphhopper.routing.util.FlagEncoder;
-import com.graphhopper.routing.util.TransportationMode;
 import com.graphhopper.util.EdgeIteratorState;
 import com.graphhopper.util.PMap;
 import com.graphhopper.util.Parameters.Routing;
@@ -65,15 +64,15 @@ public class FastestWeighting extends AbstractWeighting {
         headingPenaltyMillis = Math.round(headingPenalty * 1000);
         maxSpeed = encoder.getMaxSpeed() / SPEED_CONV;
 
-        if (!encoder.hasEncodedValue(RoadAccess.KEY))
-            throw new IllegalArgumentException("road_access is not available but expected for FastestWeighting");
-
         // ensure that we do not need to change getMinWeight, i.e. road_access_factor >= 1
-        double defaultDestinationFactor = encoder.getTransportationMode().isMotorVehicle()? 10 : 1;
+        double defaultDestinationFactor = encoder.getTransportationMode().isMotorVehicle() ? 10 : 1;
         destinationPenalty = checkBounds("road_access_destination_factor", map.getDouble("road_access_destination_factor", defaultDestinationFactor), 1, 10);
-        double defaultPrivateFactor = encoder.getTransportationMode().isMotorVehicle()? 10 : 1.2;
+        double defaultPrivateFactor = encoder.getTransportationMode().isMotorVehicle() ? 10 : 1.2;
         privatePenalty = checkBounds("road_access_private_factor", map.getDouble("road_access_private_factor", defaultPrivateFactor), 1, 10);
-        roadAccessEnc = destinationPenalty > 1 || privatePenalty > 1 ? encoder.getEnumEncodedValue(RoadAccess.KEY, RoadAccess.class) : null;
+
+        if (!encoder.hasEncodedValue(encoder.getTransportationMode().getAccessName()))
+            throw new IllegalArgumentException(encoder.getTransportationMode() + " is not available but expected for FastestWeighting");
+        roadAccessEnc = destinationPenalty > 1 || privatePenalty > 1 ? encoder.getEnumEncodedValue(encoder.getTransportationMode().getAccessName(), RoadAccess.class) : null;
     }
 
     @Override
